syntax = "proto3";

option go_package = "./ecommerce";

// The service definition.
service ProductService{
    rpc CreateProduct(CreateProductRequest)returns(Product){}
    rpc UpdateProduct(UpdateProductRequest)returns(Product){}
    rpc DeleteProduct(DeleteProductRequest)returns(Product){}
    rpc GetProductById(GetProductByIdRequest)returns(GetProductByIdResponse){}
    rpc GetProductList(GetProductListRequest)returns(GetProductListResponse){}
}

message CreateProductRequest{
    string category_id = 1;
    string title = 2;
    string description = 3;
    string price = 4;
}

message UpdateProductRequest{
    string id = 1;
    string title = 2;
    string description = 3;
    string price = 4;
}

message DeleteProductRequest{
    string id = 1;
}

message GetProductByIdRequest{
    string id = 1;
}

message GetProductByIdResponse{
     message Category {
        string id = 1;
        string category_title = 2;
        string created_at = 3;
        string updated_at = 4;
    }
    string id = 1;
    Category category = 2;
    string title = 3;
    string description = 4;
    string price = 5;
    string created_at = 6;
    string updated_at = 7;
}

message Product{
    string id = 1;
    string category_id = 2;
    string title = 3;
    string description = 4;
    string price = 5;
    string created_at = 6;
    string updated_at = 7;
}

message GetProductListRequest{
    int32 offset = 1;
    int32 limit = 2;
    string search = 3;
}

message GetProductListResponse{
    repeated Product products = 1;
}
